elastic-indexer-stack/k8s-manifests/00-elasticsearch.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eqarchives-es
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: eqarchives-es
  labels:
    app: elasticsearch
spec:
  type: NodePort
  ports:
    - name: rest
      port: 9200
      targetPort: 9200
      nodePort: 31200
    - name: inter-node
      port: 9300
      targetPort: 9300
  selector:
    app: elasticsearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: eqarchives-es
spec:
  serviceName: "elasticsearch"
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.17.0
          command: ["/bin/sh"]
          args:
            - -c
            - |
              # Install s3-repository plugin for snapshot backups
              ./bin/elasticsearch-plugin list | grep -q s3-repository || ./bin/elasticsearch-plugin install --batch s3-repository
              # Create AWS S3 snapshot secrets
              echo "$AWS_ACCESS_KEY_ID" | bin/elasticsearch-keystore add --stdin --force s3.client.default.access_key
              echo "$AWS_SECRET_ACCESS_KEY" | bin/elasticsearch-keystore add --stdin --force s3.client.default.secret_key
              # Launch entrypoint
              /usr/local/bin/docker-entrypoint.sh
          ports:
            - containerPort: 9200
              name: rest
            - containerPort: 9300
              name: inter-node
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
          resources:
            requests:
              cpu: "1"
              memory: "4Gi"
            limits:
              cpu: "4"
              memory: "24Gi"
          livenessProbe:
            tcpSocket:
              port: 9200
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9200
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
        - name: init-readonly
          image: curlimages/curl:7.85.0
          command:
            - sh
            - -c
            - |
              [...]
      volumes:
        - name: elasticsearch-data
          hostPath:
            path: /mnt/samsung/es
            type: DirectoryOrCreate
